# mobile-data-calc.claude-code

./: AGENTS.md  README.md  extractor.py  main.py  pyproject.toml
.claude/skills/python-dev/: SKILL.md
extractor/: __main__.py  database.py  metadata.py  ocr.py
extractor/test/: data.csv  test_extractor.py
specifications/: easyocr-backend.md  extractor.md  implementation-plan.md
typings/pytesseract/: __init__.pyi
