[project]
name = "mobile-data-calc-claude-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.1.1",
    "pyright>=1.1.408",
    "pytesseract>=0.3.13",
]

[tool.pyright]
pythonVersion = "3.14"
include = ["extractor"]
typeCheckingMode = "strict"
